--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   latlong2: ^0.9.1
   http: ^1.4.0
   flutter_dotenv: ^5.2.1
+  geolocator: ^11.0.0
   flutter_bloc: ^9.1.1
   lucide_icons_flutter: ^3.0.7
 
