--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   lucide_icons_flutter: ^3.0.7
   shared_preferences: ^2.2.2
+  google_generative_ai: ^0.4.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
