--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   lucide_icons_flutter: ^3.0.7
   shared_preferences: ^2.2.2
   google_generative_ai: ^0.4.3
+  shimmer: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
