--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^6.2.1
   carousel_slider: ^5.1.1
   flutter_card_swiper: ^7.0.2
+  qr_flutter: ^4.1.0
   intl: ^0.20.2
   flutter_multi_formatter: ^2.13.7
   flutter_map: ^8.1.1
@@ -42,10 +43,13 @@ dependencies:
   flutter_dotenv: ^5.2.1
   geolocator: ^11.0.0
   flutter_bloc: ^9.1.1
+
   lucide_icons_flutter: ^3.0.7
   shared_preferences: ^2.5.3
   google_generative_ai: ^0.4.3
   shimmer: ^3.0.0
+  flutter_svg: ^2.0.10+1
+  path_provider: ^2.1.7
   uuid: ^4.3.5
 
   # The following adds the Cupertino Icons font to your application.
