--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_multi_formatter: ^2.13.7
   flutter_map: ^8.1.1
   flutter_polyline_points: ^2.1.0
+  image_picker: ^1.0.7
   latlong2: ^0.9.1
   http: ^1.4.0
   flutter_dotenv: ^5.2.1
