--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   lucide_icons_flutter: ^3.0.7
   shared_preferences: ^2.5.3
   google_generative_ai: ^0.4.3
+  url_launcher: ^6.3.2
   shimmer: ^3.0.0
   flutter_svg: ^2.0.10+1
   path_provider: ^2.1.5
